--- a/.hintrc
+++ b/.hintrc
@@ -1,14 +1,11 @@
 {
-  "extends": [
-    "development"
-  ],
-  "hints": {
-    "axe/name-role-value": [
-      "default",
-      {
-        "button-name": "off"
-      }
-    ],
-    "apple-touch-icons": "off"
-  }
+    "extends": ["development"],
+    "hints": {
+        "axe/name-role-value": [
+            "default",
+            {
+                "button-name": "off"
+            }
+        ]
+    }
 }
