--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "next dev --turbo",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
     },
     "dependencies": {
+        "@ducanh2912/next-pwa": "^10.0.2",
         "babel-loader": "^9.1.3",
         "clsx": "^2.0.0",
         "idb-keyval": "^6.2.1",
-        "next": "14.0.4",
-        "next-pwa": "^5.6.0",
-        "react": "^18",
-        "react-dom": "^18",
+        "next": "^14.0.4",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-icons": "^4.12.0",
         "tailwind-merge": "^2.2.0"
     },
