BREAKING_CHANGE: finalizing app

--- a/.hintrc
+++ b/.hintrc
@@ -1,11 +1,28 @@
 {
-    "extends": ["development"],
-    "hints": {
-        "axe/name-role-value": [
-            "default",
-            {
-                "button-name": "off"
-            }
+  "extends": [
+    "development"
+  ],
+  "hints": {
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "select-name": "off",
+        "label": "off"
+      }
+    ],
+    "compat-api/html": [
+      "default",
+      {
+        "ignore": [
+          "input[type=date]"
         ]
-    }
+      }
+    ]
+  }
 }
