--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "dependencies": {
         "@ducanh2912/next-pwa": "^10.0.2",
         "babel-loader": "^9.1.3",
-        "clsx": "^2.0.0",
+        "chart.js": "^4.4.1",
+        "clsx": "^2.1.0",
         "idb-keyval": "^6.2.1",
         "next": "^14.0.4",
         "react": "^18.2.0",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.12.0",
         "tailwind-merge": "^2.2.0"
