--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cSpell.words": ["keyval", "launchericon", "registerables"]
+    "cSpell.words": ["CDULE", "keyval", "launchericon", "registerables"]
 }
