fix: turning off image optimization off in export mode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "cSpell.words": ["CDULE", "keyval", "launchericon", "registerables"]
+    "cSpell.words": [
+        "CDULE",
+        "keyval",
+        "launchericon",
+        "registerables",
+        "unoptimized"
+    ]
 }
