--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "chart.js": "^4.4.1",
         "clsx": "^2.1.0",
         "idb-keyval": "^6.2.1",
+        "lodash": "^4.17.21",
         "next": "^14.0.4",
         "react": "^18.2.0",
         "react-chartjs-2": "^5.2.0",
@@ -22,6 +23,7 @@
         "tailwind-merge": "^2.2.0"
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.202",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
