--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
         "babel-loader": "^9.1.3",
         "chart.js": "^4.4.1",
         "clsx": "^2.1.0",
+        "firebase": "^10.8.0",
         "idb-keyval": "^6.2.1",
         "lodash": "^4.17.21",
+        "md5": "^2.3.0",
         "next": "^14.0.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.12.0",
-        "tailwind-merge": "^2.2.0"
+        "tailwind-merge": "^2.2.0",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "@types/lodash": "^4.14.202",
+        "@types/md5": "^2.3.5",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
