feat: realtime update, import-export modification

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,15 @@
     "cSpell.words": [
         "beforeinstallprompt",
         "CDULE",
+        "firestore",
         "keyval",
         "launchericon",
         "registerables",
         "unoptimized"
-    ]
+    ],
+    "files.associations": {
+        "*.css": "tailwindcss",
+        "*.rules": "plaintext",
+        "iostream": "cpp"
+    }
 }
