--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --turbo",
-        "build": "next build",
-        "start": "next start",
+        "dev": "next dev --webpack",
+        "build": "next build --webpack",
+        "start": "next start --webpack",
         "lint": "next lint"
     },
     "dependencies": {
